# src/services/rootApi.js
@@ -1,8 +1,9 @@
-import { logOut } from '@redux/slices/authSlice';
+import { login, logOut } from '@redux/slices/authSlice';
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react';
 
 const baseQuery = fetchBaseQuery({
   baseUrl: import.meta.env.VITE_BASE_URL,
+  // prepareHeaders: Hàm này cho phép tùy chỉnh các header của yêu cầu HTTP trước khi gửi đi.
   prepareHeaders: (headers, { getState }) => {
     console.log({ store: getState() });
     const token = getState().auth.accessToken;
@@ -14,19 +15,53 @@ const baseQuery = fetchBaseQuery({
   },
 });
 
-const baseQueryWithForceLogout = async (args, api, extraOptions) => {
+const baseQueryWithForceReauth = async (args, api, extraOptions) => {
   let result = await baseQuery(args, api, extraOptions);
 
-  if (result?.error?.status === 401) {
-    api.dispatch(logOut());
-    window.location.href = '/login';
+  console.log('baseQueryWithForceReauth', { result });
+
+  if (
+    result?.error?.status === 401 &&
+    result?.error?.data?.message === 'Token has expired.'
+  ) {
+    const refreshToken = api.getState().auth.refreshToken;
+    console.log('🔄 Refresh token before API call:', refreshToken);
+
+    if (refreshToken) {
+      const refreshResult = await baseQuery(
+        {
+          url: '/refresh-token',
+          body: { refreshToken },
+          method: 'POST',
+        },
+        api,
+        extraOptions,
+      );
+      console.log({ refreshResult });
+
+      const newAccessToken = refreshResult?.data?.accessToken;
+      if (newAccessToken) {
+        api.dispatch(
+          login({
+            accessToken: newAccessToken,
+            refreshToken,
+          }),
+        );
+
+        result = await baseQuery(args, api, extraOptions);
+      } else {
+        api.dispatch(logOut());
+        window.location.href = '/login';
+      }
+    }
+    console.log({ result });
   }
   return result;
 };
 
 export const rootApi = createApi({
   reducerPath: 'api',
-  baseQuery: baseQueryWithForceLogout,
+  baseQuery: baseQueryWithForceReauth,
   endpoints: (builder) => {
     return {
       register: builder.mutation({
@@ -56,9 +91,27 @@ export const rootApi = createApi({
           };
         },
       }),
+      refreshToken: builder.mutation({
+        query: (refreshToken) => {
+          return {
+            url: '/refresh-token',
+            body: { refreshToken },
+            method: 'POST',
+          };
+        },
+      }),
       getAuthUser: builder.query({
         query: () => {
-          return `/auth-user`;
+          return '/auth-user';
+        },
+      }),
+      createPost: builder.mutation({
+        query: (formData) => {
+          return {
+            url: '/posts',
+            body: formData,
+            method: 'POST',
+          };
         },
       }),
     };
@@ -70,4 +123,7 @@ export const {
   useLoginMutation,
   useVerifyOTPMutation,
   useGetAuthUserQuery,
+  useCreatePostMutation,
+  useRefreshTokenMutation,
 } = rootApi;
+// khi các hook được sử dụng trong component thì rtk sẽ gọi baseQueryWithForceLogout
